fix: description overflow

--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -30,6 +30,9 @@
   color: #bdc2cd;
   padding: 20px;
   word-break: break-all;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .date {
